# Computer_graphics_Konstanz

00/: CMakeLists.txt
00/src/: compile_and_link.cpp  compile_and_link.h  container.cpp  container.h  main.cpp  memory.cpp  memory.h  passing.cpp  passing.h  polygon.cpp  polygon.h
01/: CMakeLists.txt  README.md  SOLUTION.md  example.ppm  generatedImage.ppm
01/src/: main.cpp
02/: CMakeLists.txt  README.md  SOLUTION.md  exercise_02_a.ppm  exercise_02_b.ppm
02/src/: main.cpp
03/: CMakeLists.txt  README.md  SOLUTION.md
03/shaders/: gasket-2d.vert
03/src/: main.cpp
04/: CMakeLists.txt  README.md  SOLUTION.md
04/shaders/: gasket-2d.frag  gasket-2d.vert
04/src/: main.cpp
